﻿[h1]v1.0.6[/h1]
You can find the DLL, PDB and XML files in the mod's [url=https://github.com/absoluteAquarian/SerousCommonLib/releases/tag/v1.0.6]GitHub repository[/url]

- Added new methods to [i]LootHelper[/i]
- Added a rule condition: [i]LambdaRuleCondition[/i]
- Added exception catching when attempting to log IL edits made by [i]ILHelper[/i]
- Removed usage of reflection in favor of an assembly publicizer tool
- Removed the built-in sorting logic in [i]NewUIList[/i] since it complicated the backend logic