@@ -4,5 +4,6 @@ You can find the DLL, PDB and XML files in the mod's [url=https://github.com/abs
 - Added new methods to [i]LootHelper[/i]
 - Added a rule condition: [i]LambdaRuleCondition[/i]
 - Added exception catching when attempting to log IL edits made by [i]ILHelper[/i]
+- Added a new [i]SerousCommonLib.API.UIExtensions[/i] class which contains extension methods for [i]UIElement[/i]
 - Removed usage of reflection in favor of an assembly publicizer tool
 - Removed the built-in sorting logic in [i]NewUIList[/i] since it complicated the backend logic
